# pi-server-fetch

./: .env.example  Dockerfile  config.py  gunicorn.py  main.py  pyproject.toml
app/: __init__.py  routes.py
app/controllers/: fetch_controller.py  upload_controller.py  value_controller.py
app/models/: master_tag.py  value_tag.py
migrations/versions/: 833cab3f0e73_.py  987362dd146f_.py
